# UWTopMetalDrone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  min_area_pfile.tmp  runDataAcq.sh  top-metal.sublime-project  topMetalConfig.xml  topMetalDrone.cpp  vivado.jou  vivado_1453168.backup.jou  vivado_327951.backup.jou  vivado_pid1453168.str
.Xil/Vivado-1453168-phys-villain.washington.edu/hw_ila_data_1/xsim.dir/snapshot/: xsim.dbg  xsim.rtti
.Xil/Vivado-1453168-phys-villain.washington.edu/hw_ila_data_1/zip_work/: hw_ila_data_1.wcfg  hw_ila_data_1.wdb  probes.ltx  waveform.csv  waveform.dmp  waveform.vcd
include/: ProcessWaveform.h  TopMetalDigitizer.h  TopMetalDroneConfig.h  topMetalDroneConfig.h
source/: ProcessWaveform.cpp  TopMetalDigitizer.cpp  TopMetalDroneConfig.cpp  topMetalDroneConfig.cpp
